#167 Provide a FIX based interface to import repo trades + a couple of Sonar fixes + some light refactoring on interceptors